packages/components/tooltip/style/index.less
@import '../../style/variable/index.less';
@import '../../style/mixins/reset.less';
@import '../../style/motion/fade.less';

.@{tooltip-prefix} {
  .reset-component();
  .reset-font-size(var(--ix-tooltip-font-size));

  color: var(--ix-tooltip-color);
  z-index: 1000;

  &-wrapper {
    position: relative;
    word-wrap: break-word;
    min-width: var(--ix-tooltip-min-width);
    max-width: var(--ix-tooltip-max-width);
    padding: var(--ix-padding-size-xs) var(--ix-padding-size-sm);
    z-index: 1;
  }
}

